teams/blue/dev/demo-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-deployment
  namespace: dev
  labels:
    app: go-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-web
  template:
    metadata:
      labels:
        app: go-web
    spec:
      containers:
      - name: go-web-container
        image: lkravi/eks_bp_demo:d8c465c6
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: go-web-service
  namespace: dev
spec:
  selector:
    app: go-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
