teams/blue/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-go-web-service-ingress
  namespace: team-blue-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: app.dev.lkravi.me
      http:
        paths:
          - backend:
              service: 
                name: go-web-service
                port: 
                  number: 80
            path: /
            pathType: Prefix
